# PyELEGANT

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pixi.toml  pixi_activation.sh  pyproject.toml
src/pyelegant/: Touschek_F_interpolator.pkl  __init__.py  elebuilder.py  error_specs.py  errors.py  linopt_correct.py  ltemanager.py  nonlin.py  nsls2apcluster.py  nsls2pluto.py  orbit.py  remote.py  sdds.py  sysmult_conv.py
src/pyelegant/guis/nsls2apcluster/cluster_status/: main.py
src/pyelegant/guis/nsls2apcluster/genreport_wizard/: custom_pages.py
src/pyelegant/guis/nsls2pluto/cluster_status/: main.py
src/pyelegant/guis/nsls2pluto/genreport_wizard/: custom_pages.py  main.py
src/pyelegant/scripts/common/: genreport.py  scrape_elegant_manual.py
src/pyelegant/scripts/nsls2apcluster/: slurmutil.py
src/pyelegant/scripts/nsls2pluto/: slurmutil.py
